--- a/TRU-Products/Scenes/Products/Presentation/View/ProductsViewController.xib
+++ b/TRU-Products/Scenes/Products/Presentation/View/ProductsViewController.xib
@@ -1,22 +1,129 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductsViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductsViewController" customModule="TRU_Products" customModuleProvider="target">
             <connections>
+                <outlet property="gridButton" destination="SYA-q9-4BR" id="q6E-NL-CTg"/>
+                <outlet property="listButton" destination="E5c-S1-kjO" id="aLM-nH-UCz"/>
+                <outlet property="productsCollectionView" destination="Gm9-5v-xl4" id="dfb-x5-0Wi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpW-eT-Dlu">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="120"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Zda-wo-hE4">
+                            <rect key="frame" x="16" y="76" width="361" height="24"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Products" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTb-wf-8dD">
+                                    <rect key="frame" x="0.0" y="0.0" width="90.333333333333329" height="24"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
+                                    <color key="textColor" name="mainBlackColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3ss-fg-oXJ">
+                                    <rect key="frame" x="303" y="0.0" width="58" height="24"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SYA-q9-4BR">
+                                            <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="24" id="cGs-7O-1yo"/>
+                                            </constraints>
+                                            <color key="tintColor" name="grayColor"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" image="products-grid-icon">
+                                                <color key="titleColor" name="grayColor"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="didTapGridProducts:" destination="-1" eventType="touchUpInside" id="zrK-gm-fDL"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E5c-S1-kjO">
+                                            <rect key="frame" x="34" y="0.0" width="24" height="24"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="24" id="DgJ-q0-3fG"/>
+                                            </constraints>
+                                            <color key="tintColor" name="mainGrayColor"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" image="products-list-icon">
+                                                <color key="titleColor" name="mainGrayColor"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="didTapListProducts:" destination="-1" eventType="touchUpInside" id="Ppo-3W-cCe"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="24" id="LuH-4z-VTC"/>
+                            </constraints>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="Zda-wo-hE4" firstAttribute="leading" secondItem="dpW-eT-Dlu" secondAttribute="leading" constant="16" id="AsV-cY-YpL"/>
+                        <constraint firstAttribute="bottom" secondItem="Zda-wo-hE4" secondAttribute="bottom" constant="20" id="NF3-BB-UNz"/>
+                        <constraint firstAttribute="height" constant="120" id="Onh-kB-V3r"/>
+                        <constraint firstAttribute="trailing" secondItem="Zda-wo-hE4" secondAttribute="trailing" constant="16" id="vAJ-V1-YsZ"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Gm9-5v-xl4">
+                    <rect key="frame" x="0.0" y="120" width="393" height="732"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="SdF-5T-5Xb">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="Gm9-5v-xl4" firstAttribute="top" secondItem="dpW-eT-Dlu" secondAttribute="bottom" id="Ae6-6z-imn"/>
+                <constraint firstItem="Gm9-5v-xl4" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="ImJ-Us-Ei8"/>
+                <constraint firstItem="dpW-eT-Dlu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="K1f-kP-3Py"/>
+                <constraint firstItem="dpW-eT-Dlu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="OTh-0U-K1a"/>
+                <constraint firstItem="Gm9-5v-xl4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Q2J-cq-Oh7"/>
+                <constraint firstAttribute="bottom" secondItem="Gm9-5v-xl4" secondAttribute="bottom" id="WGi-u4-NvY"/>
+                <constraint firstItem="dpW-eT-Dlu" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="cvy-h1-SWB"/>
+            </constraints>
+            <point key="canvasLocation" x="-8.3969465648854964" y="19.718309859154932"/>
         </view>
     </objects>
+    <resources>
+        <image name="products-grid-icon" width="256" height="256"/>
+        <image name="products-list-icon" width="256" height="256"/>
+        <namedColor name="grayColor">
+            <color red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="mainBlackColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="mainGrayColor">
+            <color red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
